force-app/main/default/objects/Teacher__c/fields/Ex_p__c.field-meta.xml
<CustomField>
    <fullName>Ex_p__c</fullName>
    <label>Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>