force-app/main/default/objects/Teacher__c/fields/Staff_Room__c.field-meta.xml
<CustomField>
    <fullName>Staff_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Room</label>
    <referenceTo>Staff_Room__c</referenceTo>
    <relationshipLabel>Teachers</relationshipLabel>
    <relationshipName>Teachers</relationshipName>
    <type>Lookup</type>
</CustomField>