force-app/main/default/objects/Teacher__c/fields/Teacher_Id__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Id__c</fullName>
    <label>Teacher Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>