force-app/main/default/objects/Teacher__c/listViews/Verify_Data_Teacher.listView-meta.xml
<ListView>
    <fullName>Verify_Data_Teacher</fullName>
    <filterScope>Queue</filterScope>
    <label>Verify Data</label>
    <queue>Verify_Data</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>